fix finetune for streaming

--- a/nbs/03_model_lm_main.ipynb
+++ b/nbs/03_model_lm_main.ipynb
@@ -430,6 +430,7 @@
     "                seed=None, # Random seed\n",
     "                report_to='none', # The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations.\n",
     "                trainer_class=None, # You can include the class name of your custom trainer here\n",
+    "                len_train=None, # length of training steps (for streaming dataset)\n",
     "            ):\n",
     "    \"The main model training/finetuning function\"\n",
     "    torch.cuda.empty_cache()\n",
@@ -440,23 +441,25 @@
     "        seed_everything(seed)\n",
     "        \n",
     "    training_args = TrainingArguments(o_dir, \n",
-    "                                     learning_rate=lr, \n",
-    "                                     warmup_ratio=warmup_ratio,\n",
-    "                                     lr_scheduler_type=lr_scheduler_type, \n",
-    "                                     fp16=True,\n",
-    "                                     do_train=True,\n",
-    "                                     do_eval= not no_valid,\n",
-    "                                     evaluation_strategy=\"no\" if no_valid else \"epoch\", \n",
-    "                                     save_strategy=\"epoch\" if save_checkpoint else 'no',\n",
-    "                                     overwrite_output_dir=True,\n",
-    "                                     gradient_accumulation_steps=grad_accum_steps,\n",
-    "                                     per_device_train_batch_size=bs, \n",
-    "                                     per_device_eval_batch_size=val_bs,\n",
-    "                                     num_train_epochs=epochs, weight_decay=wd,\n",
-    "                                     report_to=report_to,\n",
-    "                                     logging_dir=os.path.join(o_dir, 'log') if report_to!='none' else None,\n",
-    "                                     logging_steps = len(ddict[\"train\"]) // bs,\n",
-    "                                     )\n",
+    "                                      learning_rate=lr, \n",
+    "                                      warmup_ratio=warmup_ratio,\n",
+    "                                      lr_scheduler_type=lr_scheduler_type, \n",
+    "                                      fp16=True,\n",
+    "                                      do_train=True,\n",
+    "                                      do_eval= not no_valid,\n",
+    "                                      evaluation_strategy=\"no\" if no_valid else \"epoch\", \n",
+    "                                      save_strategy=\"epoch\" if save_checkpoint else 'no',\n",
+    "                                      overwrite_output_dir=True,\n",
+    "                                      gradient_accumulation_steps=grad_accum_steps,\n",
+    "                                      per_device_train_batch_size=bs, \n",
+    "                                      per_device_eval_batch_size=val_bs,\n",
+    "                                      num_train_epochs=epochs,\n",
+    "                                      max_steps=epochs*(len_train//bs) if len_train else -1,\n",
+    "                                      weight_decay=wd,\n",
+    "                                      report_to=report_to,\n",
+    "                                      logging_dir=os.path.join(o_dir, 'log') if report_to!='none' else None,\n",
+    "                                      logging_steps = len_train//bs if len_train else len(ddict[\"train\"]) // bs\n",
+    "                                      )\n",
     "\n",
     "    # instantiate trainer\n",
     "    trainer_class = Trainer if trainer_class is None else trainer_class\n",
@@ -495,7 +498,7 @@
        ">                   data_collator=None, compute_metrics=None,\n",
        ">                   grad_accum_steps=2, lr_scheduler_type='cosine',\n",
        ">                   warmup_ratio=0.1, no_valid=False, val_bs=None, seed=None,\n",
-       ">                   report_to='none', trainer_class=None)\n",
+       ">                   report_to='none', trainer_class=None, len_train=None)\n",
        "\n",
        "The main model training/finetuning function\n",
        "\n",
@@ -520,7 +523,8 @@
        "| val_bs | NoneType | None | Validation batch size |\n",
        "| seed | NoneType | None | Random seed |\n",
        "| report_to | str | none | The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations. |\n",
-       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
+       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
+       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
       ],
       "text/plain": [
        "---\n",
@@ -534,7 +538,7 @@
        ">                   data_collator=None, compute_metrics=None,\n",
        ">                   grad_accum_steps=2, lr_scheduler_type='cosine',\n",
        ">                   warmup_ratio=0.1, no_valid=False, val_bs=None, seed=None,\n",
-       ">                   report_to='none', trainer_class=None)\n",
+       ">                   report_to='none', trainer_class=None, len_train=None)\n",
        "\n",
        "The main model training/finetuning function\n",
        "\n",
@@ -559,7 +563,8 @@
        "| val_bs | NoneType | None | Validation batch size |\n",
        "| seed | NoneType | None | Random seed |\n",
        "| report_to | str | none | The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations. |\n",
-       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
+       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
+       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
       ]
      },
      "execution_count": null,
@@ -667,6 +672,7 @@
     "            data_collator=None, # Data Collator (to override one in ```data_store```)\n",
     "            is_mlm=None, # Whether this is masked LM or casual LM\n",
     "            trainer_class=None, # You can include the class name of your custom trainer here\n",
+    "            len_train=None, # length of training steps (for streaming dataset)\n",
     "           ):\n",
     "        \n",
     "        if tokenizer is None: tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
@@ -702,7 +708,9 @@
     "                              val_bs=val_batch_size,\n",
     "                              seed=self.seed,\n",
     "                              trainer_class=trainer_class,\n",
-    "                              report_to=hf_report_to)\n",
+    "                              report_to=hf_report_to,\n",
+    "                              len_train=len_train,\n",
+    "                             )\n",
     "        \n",
     "        if not no_valid:\n",
     "            eval_results = trainer.evaluate()\n",
@@ -895,7 +903,7 @@
        ">                             o_dir='./tmp_weights', save_checkpoint=False,\n",
        ">                             hf_report_to='none', grad_accum_steps=2,\n",
        ">                             tokenizer=None, data_collator=None, is_mlm=None,\n",
-       ">                             trainer_class=None)\n",
+       ">                             trainer_class=None, len_train=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -915,7 +923,8 @@
        "| tokenizer | NoneType | None | Tokenizer (to override one in ```data_store```) |\n",
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
        "| is_mlm | NoneType | None | Whether this is masked LM or casual LM |\n",
-       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
+       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
+       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
       ],
       "text/plain": [
        "---\n",
@@ -931,7 +940,7 @@
        ">                             o_dir='./tmp_weights', save_checkpoint=False,\n",
        ">                             hf_report_to='none', grad_accum_steps=2,\n",
        ">                             tokenizer=None, data_collator=None, is_mlm=None,\n",
-       ">                             trainer_class=None)\n",
+       ">                             trainer_class=None, len_train=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -951,7 +960,8 @@
        "| tokenizer | NoneType | None | Tokenizer (to override one in ```data_store```) |\n",
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
        "| is_mlm | NoneType | None | Whether this is masked LM or casual LM |\n",
-       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
+       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
+       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
       ]
      },
      "execution_count": null,
