--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -622,6 +622,7 @@
     "             seed=None, # Random seed\n",
     "             report_to='none', # The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations.\n",
     "             trainer_class=None, # You can include the class name of your custom trainer here\n",
+    "             len_train=None, # length of training steps (for streaming dataset)\n",
     "            ):\n",
     "    \"The main model training/finetuning function\"\n",
     "    torch.cuda.empty_cache()\n",
@@ -631,23 +632,25 @@
     "        seed_everything(seed)\n",
     "        \n",
     "    training_args = TrainingArguments(o_dir, \n",
-    "                                learning_rate=lr, \n",
-    "                                warmup_ratio=warmup_ratio,\n",
-    "                                lr_scheduler_type=lr_scheduler_type, \n",
-    "                                fp16=True,\n",
-    "                                do_train=True,\n",
-    "                                do_eval= not no_valid,\n",
-    "                                evaluation_strategy=\"no\" if no_valid else \"epoch\", \n",
-    "                                save_strategy=\"epoch\" if save_checkpoint else 'no',\n",
-    "                                overwrite_output_dir=True,\n",
-    "                                gradient_accumulation_steps=grad_accum_steps,\n",
-    "                                per_device_train_batch_size=bs, \n",
-    "                                per_device_eval_batch_size=val_bs,\n",
-    "                                num_train_epochs=epochs, weight_decay=wd,\n",
-    "                                report_to=report_to,\n",
-    "                                logging_dir=os.path.join(o_dir, 'log') if report_to!='none' else None,\n",
-    "                                logging_steps = len(ddict[\"train\"]) // bs,\n",
-    "                                )\n",
+    "                                      learning_rate=lr, \n",
+    "                                      warmup_ratio=warmup_ratio,\n",
+    "                                      lr_scheduler_type=lr_scheduler_type, \n",
+    "                                      fp16=True,\n",
+    "                                      do_train=True,\n",
+    "                                      do_eval= not no_valid,\n",
+    "                                      evaluation_strategy=\"no\" if no_valid else \"epoch\", \n",
+    "                                      save_strategy=\"epoch\" if save_checkpoint else 'no',\n",
+    "                                      overwrite_output_dir=True,\n",
+    "                                      gradient_accumulation_steps=grad_accum_steps,\n",
+    "                                      per_device_train_batch_size=bs, \n",
+    "                                      per_device_eval_batch_size=val_bs,\n",
+    "                                      num_train_epochs=epochs,\n",
+    "                                      max_steps=epochs*(len_train//bs) if len_train else -1,\n",
+    "                                      weight_decay=wd,\n",
+    "                                      report_to=report_to,\n",
+    "                                      logging_dir=os.path.join(o_dir, 'log') if report_to!='none' else None,\n",
+    "                                      logging_steps = len_train//bs if len_train else len(ddict[\"train\"]) // bs \n",
+    "                                     )\n",
     "\n",
     "    # instantiate trainer\n",
     "    trainer_class = Trainer if trainer_class is None else trainer_class\n",
@@ -684,7 +687,8 @@
        ">                save_checkpoint=False, model=None, model_init=None,\n",
        ">                data_collator=None, compute_metrics=None, grad_accum_steps=2,\n",
        ">                lr_scheduler_type='cosine', warmup_ratio=0.1, no_valid=False,\n",
-       ">                val_bs=None, seed=None, report_to='none', trainer_class=None)\n",
+       ">                val_bs=None, seed=None, report_to='none', trainer_class=None,\n",
+       ">                len_train=None)\n",
        "\n",
        "The main model training/finetuning function\n",
        "\n",
@@ -709,7 +713,8 @@
        "| val_bs | NoneType | None | Validation batch size |\n",
        "| seed | NoneType | None | Random seed |\n",
        "| report_to | str | none | The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations. |\n",
-       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
+       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
+       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
       ],
       "text/plain": [
        "---\n",
@@ -722,7 +727,8 @@
        ">                save_checkpoint=False, model=None, model_init=None,\n",
        ">                data_collator=None, compute_metrics=None, grad_accum_steps=2,\n",
        ">                lr_scheduler_type='cosine', warmup_ratio=0.1, no_valid=False,\n",
-       ">                val_bs=None, seed=None, report_to='none', trainer_class=None)\n",
+       ">                val_bs=None, seed=None, report_to='none', trainer_class=None,\n",
+       ">                len_train=None)\n",
        "\n",
        "The main model training/finetuning function\n",
        "\n",
@@ -747,7 +753,8 @@
        "| val_bs | NoneType | None | Validation batch size |\n",
        "| seed | NoneType | None | Random seed |\n",
        "| report_to | str | none | The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations. |\n",
-       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
+       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
+       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
       ]
      },
      "execution_count": null,
@@ -1033,6 +1040,7 @@
     "            label_names=None, # Names of the label (dependent variable) columns (to override one in ```data_store```)\n",
     "            head_sizes=None, # Class size for each head (to override one in ```model```)\n",
     "            trainer_class=None, # You can include the class name of your custom trainer here\n",
+    "            len_train=None, # Length of training steps (for streaming dataset)\n",
     "           ):\n",
     "        \n",
     "        if tokenizer is None: tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
@@ -1073,7 +1081,9 @@
     "                           val_bs=val_batch_size,\n",
     "                           seed=self.seed,\n",
     "                           trainer_class=trainer_class,\n",
-    "                           report_to=hf_report_to)\n",
+    "                           report_to=hf_report_to,\n",
+    "                           len_train=len_train,\n",
+    "                          )\n",
     "        self.trainer = trainer\n",
     "        \n",
     "    def predict_raw_text(self,\n",
@@ -1249,7 +1259,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L385){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L388){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController\n",
        "\n",
@@ -1266,7 +1276,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L385){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L388){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController\n",
        "\n",
@@ -1300,13 +1310,13 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L395){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L398){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.fit\n",
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7ff4e4825630>], metric_types=[], batch_size=16,\n",
+       ">                           0x745098589f30>], metric_types=[], batch_size=16,\n",
        ">                           val_batch_size=None, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
@@ -1314,7 +1324,7 @@
        ">                           compute_metrics>, grad_accum_steps=2,\n",
        ">                           tokenizer=None, data_collator=None,\n",
        ">                           label_names=None, head_sizes=None,\n",
-       ">                           trainer_class=None)\n",
+       ">                           trainer_class=None, len_train=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -1337,18 +1347,19 @@
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
        "| label_names | NoneType | None | Names of the label (dependent variable) columns (to override one in ```data_store```) |\n",
        "| head_sizes | NoneType | None | Class size for each head (to override one in ```model```) |\n",
-       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
+       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
+       "| len_train | NoneType | None | Length of training steps (for streaming dataset) |"
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L395){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L398){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.fit\n",
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7ff4e4825630>], metric_types=[], batch_size=16,\n",
+       ">                           0x745098589f30>], metric_types=[], batch_size=16,\n",
        ">                           val_batch_size=None, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
@@ -1356,7 +1367,7 @@
        ">                           compute_metrics>, grad_accum_steps=2,\n",
        ">                           tokenizer=None, data_collator=None,\n",
        ">                           label_names=None, head_sizes=None,\n",
-       ">                           trainer_class=None)\n",
+       ">                           trainer_class=None, len_train=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -1379,7 +1390,8 @@
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
        "| label_names | NoneType | None | Names of the label (dependent variable) columns (to override one in ```data_store```) |\n",
        "| head_sizes | NoneType | None | Class size for each head (to override one in ```model```) |\n",
-       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
+       "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
+       "| len_train | NoneType | None | Length of training steps (for streaming dataset) |"
       ]
      },
      "execution_count": null,
@@ -1401,7 +1413,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L459){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L465){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1413,7 +1425,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L459){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L465){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1442,7 +1454,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L480){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L486){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1454,7 +1466,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L480){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L486){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1483,7 +1495,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L503){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L509){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
@@ -1514,7 +1526,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L503){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L509){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
