fix small bugs in RobertaClassificationHeadCustom

--- a/nbs/04_models.roberta.classifiers.ipynb
+++ b/nbs/04_models.roberta.classifiers.ipynb
@@ -268,8 +268,8 @@
     "        num_labels=num_labels if num_labels is not None else config.num_labels\n",
     "        self.out_proj = torch.nn.Linear(config.hidden_size, num_labels)\n",
     "\n",
-    "    def forward(self, features, **kwargs):\n",
-    "        x = self.dropout(x)\n",
+    "    def forward(self, inp, **kwargs):\n",
+    "        x = self.dropout(inp)\n",
     "        x = self.dense(x)\n",
     "        x = torch.tanh(x)\n",
     "        x = self.dropout(x)\n",
@@ -527,7 +527,7 @@
     "                 is_multihead=False, # Whether this is a multihead (multi-level) classification\n",
     "                 head_class_sizes=[], # Class size for each head\n",
     "                 head_weights=[], # loss weight for each head. This will be multiplied to the loss of each head's output\n",
-    "                 head_class=None, # The class object of the head. You can use RobertaClassificationHeadCustom as default\n",
+    "                 head_class=None, # The class object of the head. You can use ConcatHeadSimple or ConcatHeadExtended\n",
     "                 **head_class_kwargs, # Keyword arguments for the head class\n",
     "                ):\n",
     "        super().__init__(config)\n",
@@ -637,7 +637,7 @@
        "| is_multihead | bool | False | Whether this is a multihead (multi-level) classification |\n",
        "| head_class_sizes | list | [] | Class size for each head |\n",
        "| head_weights | list | [] | loss weight for each head. This will be multiplied to the loss of each head's output |\n",
-       "| head_class | NoneType | None | The class object of the head. You can use RobertaClassificationHeadCustom as default |\n",
+       "| head_class | NoneType | None | The class object of the head. You can use ConcatHeadSimple or ConcatHeadExtended |\n",
        "| head_class_kwargs |  |  |  |"
       ],
       "text/plain": [
@@ -666,7 +666,7 @@
        "| is_multihead | bool | False | Whether this is a multihead (multi-level) classification |\n",
        "| head_class_sizes | list | [] | Class size for each head |\n",
        "| head_weights | list | [] | loss weight for each head. This will be multiplied to the loss of each head's output |\n",
-       "| head_class | NoneType | None | The class object of the head. You can use RobertaClassificationHeadCustom as default |\n",
+       "| head_class | NoneType | None | The class object of the head. You can use ConcatHeadSimple or ConcatHeadExtended |\n",
        "| head_class_kwargs |  |  |  |"
       ]
      },
