--- a/nbs/09_models.gpt2.classifiers.ipynb
+++ b/nbs/09_models.gpt2.classifiers.ipynb
@@ -276,7 +276,7 @@
     "                 is_multihead=False, # Whether this is a multihead (multi-level) classification\n",
     "                 head_class_sizes=[], # Class size for each head\n",
     "                 head_weights=[], # loss weight for each head. This will be multiplied to the loss of each head's output\n",
-    "                 head_class=None, # The class object of the head\n",
+    "                 head_class=None, # The class object of the head. You can use ConcatHeadSimple or ConcatHeadExtended\n",
     "                 **head_class_kwargs, # Keyword arguments for the head class\n",
     "                ):\n",
     "        super().__init__(config)\n",
@@ -428,7 +428,7 @@
        "| is_multihead | bool | False | Whether this is a multihead (multi-level) classification |\n",
        "| head_class_sizes | list | [] | Class size for each head |\n",
        "| head_weights | list | [] | loss weight for each head. This will be multiplied to the loss of each head's output |\n",
-       "| head_class | NoneType | None | The class object of the head |\n",
+       "| head_class | NoneType | None | The class object of the head. You can use ConcatHeadSimple or ConcatHeadExtended |\n",
        "| head_class_kwargs |  |  |  |"
       ],
       "text/plain": [
@@ -457,7 +457,7 @@
        "| is_multihead | bool | False | Whether this is a multihead (multi-level) classification |\n",
        "| head_class_sizes | list | [] | Class size for each head |\n",
        "| head_weights | list | [] | loss weight for each head. This will be multiplied to the loss of each head's output |\n",
-       "| head_class | NoneType | None | The class object of the head |\n",
+       "| head_class | NoneType | None | The class object of the head. You can use ConcatHeadSimple or ConcatHeadExtended |\n",
        "| head_class_kwargs |  |  |  |"
       ]
      },
